<resources>
    <string name="app_name">Github for developer</string>

    <!-- Project text -->
    <string name="fail_access_token">Github for developers\n환영합니다</string>
    <string name="welcome_app">개발자를 위한 깃허브 앱에 오신것을 환영합니다.\n로그인 버튼을 눌러주세요</string>
    <string name="invalid_token">로그인 토큰 발급을 실패하였습니다\n다시 시도 해주세요</string>
    <string name="today_contribution">Today</string>
    <string name="max_contribution">Max</string>
    <string name="year_contribution">Year</string>
    <string name="navigation_menu_home">Home</string>
    <string name="navigation_menu_rank">Rank</string>
    <string name="navigation_menu_help">Help</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wen">WEN</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="main_view_user_id">User ID</string>
    <string name="main_view_user_sample_url">https://github/gfd</string>
    <string name="rank_view_today_rank">금일 컨트리뷰션 랭킹</string>
    <string name="rank_view_sample_rank">0</string>
    <string name="rank_view_rank_txt">등</string>
    <string name="rank_view_sample_commit">0</string>
    <string name="rank_view_commit_txt">Ctb</string>
    <string name="rv_rank_num">0</string>
    <string name="rv_rank_user_name">gfd</string>
    <string name="rv_rank_commit">0</string>
    <string name="text_github">Github </string>
    <string name="text_login"> Login</string>
    <string name="app_tv_count_users">누적 회원 수</string>

    <!-- Project String env -->
    <string name="no_token">empty token</string>
    <string name="no_user_key">Empty key</string>
    <string name="no_user_id">Empty user id</string>
    <string name="no_user_email">Empty user url</string>
    <string name="no_user_image">Empty user image</string>
    <string name="user_id">user_id</string>
    <string name="user_url">user_url</string>
    <string name="user_today">user_today</string>
    <string name="user_year">user_year</string>
    <string name="user_max">user_max</string>
    <string name="user_image">user_image</string>
    <string name="user_gid">user_gid</string>
    <string name="user_info">user_info</string>

    <!-- Github Request Url -->
    <string name="github_base_url">https://api.github.com/</string>
    <string name="github_oauth_url">https://github.com/login/oauth/authorize/</string>
    <string name="github_get_access_token_url">"https://github.com/login/oauth/"</string>

    <!-- AdMob key -->
    <string name="admob_app_id">ca-app-pub-2766237193476584~2069127933</string>
    <string name="banner_ad_unit_id">ca-app-pub-2766237193476584/5214166022</string>
    <string name="banner_ad_unit_id_for_test">ca-app-pub-3940256099942544/6300978111</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Remove or change this placeholder text -->


</resources>
